fix code review and additional issue findings
Signed-off-by: Dmytro Stonaiev <Dmytro.Stonaiev@ibm.com>